--- a/Model/Seq2Seq_Chatbot.ipynb
+++ b/Model/Seq2Seq_Chatbot.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "10St4CFjGnWNxP-TX0Wvjt8tCpPJbUiA2",
-      "authorship_tag": "ABX9TyNhxC2jnTN8Oewu7gbbgrZH",
+      "authorship_tag": "ABX9TyN8hjTcj1umIwxJTdlB0Lkd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1134,7 +1134,7 @@
       "metadata": {
         "id": "yUVkY88bUUSM"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1149,7 +1149,7 @@
         "id": "Arye_nidUKQ6",
         "outputId": "36c8be35-1d44-444f-9bc6-98bfe6c5fe92"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1172,7 +1172,7 @@
         "id": "f-TW_KhyULvJ",
         "outputId": "1e6d3b62-9cef-422e-cf33-ca90c7f79ff7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1195,7 +1195,7 @@
         "id": "ePtxhAfbWk36",
         "outputId": "b33c2d87-677e-4545-cfe3-5019c2296de6"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1221,7 +1221,7 @@
         "id": "ZvaYdlB9Ic_i",
         "outputId": "62225ddf-f155-4d00-9936-2d663d3dbe12"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1380,7 +1380,7 @@
         },
         "outputId": "b24935a2-7c4b-4de3-e42e-8675c245dc24"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1560,7 +1560,7 @@
       "metadata": {
         "id": "3r_5juaWdiEs"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1584,7 +1584,7 @@
         },
         "outputId": "bc9a065b-2075-4f40-86bb-cd18d49de2d1"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1634,7 +1634,7 @@
       "metadata": {
         "id": "3910AEb5UuTu"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1651,7 +1651,7 @@
       "metadata": {
         "id": "-zHXRZCBIoaD"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1680,7 +1680,7 @@
       "metadata": {
         "id": "G_tTpjVsUypo"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1691,7 +1691,7 @@
       "metadata": {
         "id": "LhOixfT_YX75"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1707,7 +1707,7 @@
         "id": "gQJA9iw7Yb2n",
         "outputId": "0e35f32b-587b-4ffe-dc59-6ffaf9c01c91"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1731,7 +1731,7 @@
       "metadata": {
         "id": "UUI_MjF6I7eN"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1758,7 +1758,7 @@
       "metadata": {
         "id": "T45_lwXmZmaL"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1785,7 +1785,7 @@
         "id": "WHRvNeoCBLZ1",
         "outputId": "483f1f40-2999-49af-87c1-3543d6529b0d"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1814,7 +1814,7 @@
         "id": "nkow2f_E_ozg",
         "outputId": "6d97cfbd-2d98-4067-8c25-f07ba7aa5e0f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1851,7 +1851,7 @@
       "metadata": {
         "id": "10fiyJV6cB7T"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1871,7 +1871,7 @@
       "metadata": {
         "id": "tlJ5Gb9KbWjT"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1883,7 +1883,7 @@
       "metadata": {
         "id": "IjDKcRPIb4UB"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1899,7 +1899,7 @@
         "id": "VgLTJNiugDKE",
         "outputId": "18ddb750-c7ee-46cc-b19e-e8022cee1c72"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1930,7 +1930,7 @@
         "id": "ah3oaCodgsMq",
         "outputId": "2af31e1a-3e9b-4854-d9f5-facdb382ff2c"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1961,7 +1961,7 @@
         "id": "8Uh_i0LmhT_u",
         "outputId": "9bbf454b-9026-4788-e61c-e450c16d7742"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1989,7 +1989,7 @@
       "metadata": {
         "id": "7Stu682DlPZ6"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2028,7 +2028,7 @@
       "metadata": {
         "id": "aimDJ_nH0MFd"
       },
-      "execution_count": 23,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -2043,35 +2043,157 @@
         "\n",
         "  def forward(self,x):\n",
         "    x=self.embedding(x)  # (batch_size, Max_len, emb_dim)\n",
-        "    outputs,last_hidden_state=self.gru(x)\n",
+        "    outputs,last_hidden_state=self.gru(x) # outputs: ( batch_size, Max_len, dense_dim ) last_hidden_state : ( batch_size, hidden_dim )\n",
         "    \n",
-        "    return self.dense(outputs),self.dense(outputs)"
+        "    return self.dense(outputs),self.dense(last_hidden_state)"
       ],
       "metadata": {
         "id": "Rm_OAmrCoQuY"
-      },
-      "execution_count": 24,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class Attention(nn.Module):\n",
-        "  def __init__(self,outputs,last_hidden_state,dense_dim,Max_len):\n",
-        "    self.dense=nn.Linear(outputs.size()[-1]+last_hidden_state.size()[-1],1)\n",
-        "    self.softmax=nn.Softmax(dim=1)"
-      ],
-      "metadata": {
-        "id": "ekbi_-Yg3liO"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
+      "source": [
+        "class Attention(nn.Module):\n",
+        "  def __init__(self,dense_dim):\n",
+        "    super(Attention,self)\n",
+        "    self.dense=nn.Linear(dense_dim,1)\n",
+        "    self.softmax=nn.Softmax(dim=1)\n",
+        "\n",
+        "  def forward(self,outputs,last_hidden_state):\n",
+        "    after_sum=outputs+last_hidden_state  # ( batch_size, Max_len, dense_dim )\n",
+        "    after_dense=self.dense(after_sum) # ( batch_size, Max_len, 1 )\n",
+        "    after_softmax=self.softmax(after_dense) # ( batch_size, Max_len, 1 )\n",
+        "    context_vector=torch.sum(after_softmax*outputs,dim=1) # ( batch_size, dense_dim )\n",
+        "\n",
+        "    return context_vector"
+      ],
+      "metadata": {
+        "id": "ekbi_-Yg3liO"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## Sum\n",
+        "a=torch.Tensor([[[1,2,3],[4,5,6]]])\n",
+        "b=torch.Tensor([[1,2,3]])\n",
+        "print(a.size())\n",
+        "print(b.size())\n",
+        "a+b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QrQ-TY_RyQow",
+        "outputId": "8b7dbf0e-6992-4ed8-c89b-6d7248a8bb04"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([1, 2, 3])\n",
+            "torch.Size([1, 3])\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[2., 4., 6.],\n",
+              "         [5., 7., 9.]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## Softmax\n",
+        "softmax=nn.Softmax(dim=1)\n",
+        "a=torch.Tensor([[[3],[5],[4],[1]]])\n",
+        "out=softmax(a)\n",
+        "out"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W4YHAWa70FsQ",
+        "outputId": "7ba15fa2-8b7c-4c05-a165-28d5f206207f"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0.0889],\n",
+              "         [0.6572],\n",
+              "         [0.2418],\n",
+              "         [0.0120]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## Weighted Sum\n",
+        "a=torch.Tensor([[[1,2,3],[4,5,6]]])\n",
+        "b=torch.Tensor([[[1],[2]]])\n",
+        "print(a.size())\n",
+        "print(b.size())\n",
+        "a*b"
+      ],
+      "metadata": {
+        "id": "nXWisayT8oDb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3f663ffd-8571-4cdc-d05b-f9ef90b58050"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([1, 2, 3])\n",
+            "torch.Size([1, 2, 1])\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 1.,  2.,  3.],\n",
+              "         [ 8., 10., 12.]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "nXWisayT8oDb"
+        "id": "McFKGQfUzgqV"
       },
       "execution_count": null,
       "outputs": []
