--- a/Model/Seq2Seq_Chatbot_ver2.ipynb
+++ b/Model/Seq2Seq_Chatbot_ver2.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1s2apnqQ839LRwPwRYnO9jzPxh48lgE4h",
-      "authorship_tag": "ABX9TyMqOv7/iQRyqVGsRgqYmbuS",
+      "authorship_tag": "ABX9TyNthWaRl8xwxPH3xZoCeUtF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -16,8 +16,7 @@
     "language_info": {
       "name": "python"
     },
-    "gpuClass": "standard",
-    "accelerator": "GPU"
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -2823,10 +2822,20 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Jvwpzp8tQVza"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "a=torch.Tensor([[[1,2,3],[4,5,6]],[[7,8,9],[3,2,1]]])\n",
         "print(a)\n",
         "print(a.size())\n",
+        "print(a.mean())\n",
         "a=a.transpose(1,2)\n",
         "print(a)\n",
         "print(a.size())"
@@ -2836,9 +2845,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q9cC59WVHTO0",
-        "outputId": "1b3d6e91-16d5-4d44-df78-d0b5d0151a42"
+        "outputId": "0c50076c-f50a-403b-8e1f-e4853ad31467"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -2850,6 +2859,7 @@
             "        [[7., 8., 9.],\n",
             "         [3., 2., 1.]]])\n",
             "torch.Size([2, 2, 3])\n",
+            "tensor(4.2500)\n",
             "tensor([[[1., 4.],\n",
             "         [2., 5.],\n",
             "         [3., 6.]],\n",
@@ -2889,14 +2899,14 @@
         "  # 패딩을 loss 계산에서 지울 것이다. => label에서 index가 1인 부분에 대한 mask를 생성해서 곱해주자 / 추가적으로 accuracy 계산에서도 사용할 mask를 반환\n",
         "    mask=torch.ones(loss.size()).to(device)\n",
         "    mask=torch.logical_not(mask==label)\n",
-        "    loss=(mask*loss).sum()\n",
+        "    loss=(mask*loss).mean()\n",
         "\n",
         "    return loss,mask"
       ],
       "metadata": {
         "id": "WCtQYJGccFzl"
       },
-      "execution_count": 39,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -2922,7 +2932,7 @@
       "metadata": {
         "id": "zaKxbyQBU8rq"
       },
-      "execution_count": 40,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -2941,7 +2951,7 @@
       "metadata": {
         "id": "DaMc7CLZdL5B"
       },
-      "execution_count": 41,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -2976,7 +2986,7 @@
       "metadata": {
         "id": "dWCnVQyRUnOJ"
       },
-      "execution_count": 42,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -3051,7 +3061,7 @@
       "metadata": {
         "id": "MlLvoqKFRyxz"
       },
-      "execution_count": 43,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -3071,10 +3081,37 @@
         "    best_val_loss=val_loss"
       ],
       "metadata": {
-        "id": "hJv-rXp1JrAG"
+        "id": "hJv-rXp1JrAG",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 412
+        },
+        "outputId": "150c06b5-7c33-44eb-b64c-8434565ea22d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "  0%|          | 12/5321 [00:37<4:38:38,  3.15s/it]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-51-a4aa416f0b26>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mEPOCH\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtrain_iter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m   \u001b[0mval_loss\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mval_acc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mevaluation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mval_iter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-47-395d9e679b76>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, optimizer, criterion, train_iter)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    485\u001b[0m                 \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    486\u001b[0m             )\n\u001b[0;32m--> 487\u001b[0;31m         torch.autograd.backward(\n\u001b[0m\u001b[1;32m    488\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    489\u001b[0m         )\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    198\u001b[0m     \u001b[0;31m# some Python versions print out the first line of a multi-line function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m     \u001b[0;31m# calls in the traceback and some print out the last line\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 200\u001b[0;31m     Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[1;32m    201\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    202\u001b[0m         allow_unreachable=True, accumulate_grad=True)  # Calls into the C++ engine to run the backward pass\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
