--- a/Model/Seq2Seq_Chatbot_ver2.ipynb
+++ b/Model/Seq2Seq_Chatbot_ver2.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1s2apnqQ839LRwPwRYnO9jzPxh48lgE4h",
-      "authorship_tag": "ABX9TyNthWaRl8xwxPH3xZoCeUtF",
+      "authorship_tag": "ABX9TyME+nQzS9GlcMNc32NE289O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1133,7 +1133,7 @@
       "metadata": {
         "id": "yUVkY88bUUSM"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1148,7 +1148,7 @@
         "id": "Arye_nidUKQ6",
         "outputId": "8b4603bc-9d0c-4a01-c93d-554204eea8ea"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1171,7 +1171,7 @@
         "id": "f-TW_KhyULvJ",
         "outputId": "6898fea9-8aac-41f0-fc7d-3c24291c02c0"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1194,7 +1194,7 @@
         "id": "ePtxhAfbWk36",
         "outputId": "f530e4c3-574f-48c7-b562-f624b166afc6"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1220,7 +1220,7 @@
         "id": "ZvaYdlB9Ic_i",
         "outputId": "3009b461-ad9f-4366-b082-5dac0888465a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1379,7 +1379,7 @@
         },
         "outputId": "dc449d5b-4e80-4a80-da62-782a3d4df8e3"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1559,7 +1559,7 @@
       "metadata": {
         "id": "3r_5juaWdiEs"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1583,7 +1583,7 @@
         },
         "outputId": "8df9e90a-c337-4ec3-a259-434926e4d4a3"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1623,7 +1623,7 @@
       "metadata": {
         "id": "3910AEb5UuTu"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1640,7 +1640,7 @@
       "metadata": {
         "id": "-zHXRZCBIoaD"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1669,7 +1669,7 @@
       "metadata": {
         "id": "G_tTpjVsUypo"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1680,7 +1680,7 @@
       "metadata": {
         "id": "LhOixfT_YX75"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1696,7 +1696,7 @@
         "id": "gQJA9iw7Yb2n",
         "outputId": "24b093ed-991d-4679-be81-a7f0c753a8c8"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1720,7 +1720,7 @@
       "metadata": {
         "id": "UUI_MjF6I7eN"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1747,7 +1747,7 @@
       "metadata": {
         "id": "T45_lwXmZmaL"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1840,7 +1840,7 @@
       "metadata": {
         "id": "10fiyJV6cB7T"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1860,7 +1860,7 @@
       "metadata": {
         "id": "tlJ5Gb9KbWjT"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1872,7 +1872,7 @@
       "metadata": {
         "id": "IjDKcRPIb4UB"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2006,7 +2006,7 @@
       "metadata": {
         "id": "dGq5dZEguB0Z"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2019,7 +2019,7 @@
       "metadata": {
         "id": "aimDJ_nH0MFd"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2040,7 +2040,7 @@
       "metadata": {
         "id": "Rm_OAmrCoQuY"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2067,7 +2067,7 @@
       "metadata": {
         "id": "ekbi_-Yg3liO"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2085,7 +2085,7 @@
         "id": "FFTSr4Nl2noH",
         "outputId": "ee644ac8-dfb0-4c9e-a291-915c92156b17"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2319,7 +2319,7 @@
       "metadata": {
         "id": "McFKGQfUzgqV"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2425,7 +2425,7 @@
         "id": "LmxTKceTFLXh",
         "outputId": "65282081-b7b0-49a7-e580-220d2339a0b4"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2489,7 +2489,7 @@
       "metadata": {
         "id": "JhBAFUg5TniG"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2505,7 +2505,7 @@
         "id": "wAcgimmMMfNi",
         "outputId": "f6f120ae-bf23-454b-dd8c-61b82fdf1aea"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2738,7 +2738,7 @@
         "id": "pYZtN8UJTHcU",
         "outputId": "a42508ce-61a0-490e-9881-0d598b4cfa50"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2762,7 +2762,7 @@
       "metadata": {
         "id": "dkoWVHUC_ec4"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2822,15 +2822,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Jvwpzp8tQVza"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "a=torch.Tensor([[[1,2,3],[4,5,6]],[[7,8,9],[3,2,1]]])\n",
         "print(a)\n",
@@ -2847,7 +2838,7 @@
         "id": "Q9cC59WVHTO0",
         "outputId": "0c50076c-f50a-403b-8e1f-e4853ad31467"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2889,7 +2880,7 @@
       "metadata": {
         "id": "SSjXWYt2SAuE"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2906,7 +2897,7 @@
       "metadata": {
         "id": "WCtQYJGccFzl"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2932,7 +2923,7 @@
       "metadata": {
         "id": "zaKxbyQBU8rq"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2951,7 +2942,7 @@
       "metadata": {
         "id": "DaMc7CLZdL5B"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2976,6 +2967,7 @@
         "\n",
         "    logit=logit.transpose(1,2) # logit : (batch_size, max_len, vocab_size)\n",
         "    acc,size=acc_padding(logit,label,mask)\n",
+        "    acc+=acc\n",
         "    size+=size\n",
         "\n",
         "  avg_loss=total_loss/size\n",
@@ -2986,7 +2978,7 @@
       "metadata": {
         "id": "dWCnVQyRUnOJ"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3019,6 +3011,7 @@
       "cell_type": "code",
       "source": [
         "a=torch.Tensor([[[1,2,3,4],[5,6,7,8]],[[4,3,2,1],[9,8,7,6]]])\n",
+        "print(a)\n",
         "c=a.max(2)[1]\n",
         "print(c)\n",
         "b=torch.Tensor([[1,3],[0,1]])\n",
@@ -3061,7 +3054,7 @@
       "metadata": {
         "id": "MlLvoqKFRyxz"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3088,7 +3081,7 @@
         },
         "outputId": "150c06b5-7c33-44eb-b64c-8434565ea22d"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
